[gd_scene load_steps=2 format=3 uid="uid://c8q6v4j2y5n3r"]

[ext_resource type="Script" path="res://config_panel.gd" id="1_0k4m3"]

[node name="ConfigPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k4m3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Server Configuration"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="ServerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddServerPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/AddServerPanel"]
layout_mode = 2

[node name="ServerURLLabel" type="Label" parent="VBoxContainer/AddServerPanel/VBoxContainer"]
layout_mode = 2
text = "Server URL:"

[node name="ServerURLLineEdit" type="LineEdit" parent="VBoxContainer/AddServerPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter server URL (e.g., http://localhost:8080)"

[node name="AddServerButton" type="Button" parent="VBoxContainer/AddServerPanel/VBoxContainer"]
layout_mode = 2
text = "Add Server"

[node name="StatusLabel" type="Label" parent="VBoxContainer/AddServerPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer/AddServerPanel/VBoxContainer/AddServerButton" to="." method="_on_add_server_pressed"] 